# solcore_gui

./: .gitignore  LICENSE  README.md  pyproject.toml
