[tool.poetry]
name = "solcore_gui"
version = "0.1.0"
description = ""
authors = ["Diego <d.alonso-alvarez@imperial.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
wheel = "^0.36.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
